--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -216,3 +216,20 @@
         font-size: 16px;
     }
 }
+
+.about {
+    opacity: 0;
+    transform: translateX(-100%);
+    animation: slideInFromRight 2s forwards;
+}
+
+@keyframes slideInFromRight {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
